--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    width:fit-content;
+    width: 800px;
     border: 1px black;
 }
 
@@ -10,7 +10,7 @@ h3 {font-size: 1em}
 
 .grid {
     display: grid;
-    grid-template-columns: 300px 476px;
+    grid-template-columns: 400px 400px;
     /* grid-gap: 80px; */
     background-color: white;
     color:blue;
@@ -18,14 +18,16 @@ h3 {font-size: 1em}
 
 img {
     width: 100%;
+    /* object-fit: cover; */
 }
 
-.photo {
+#photo {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    width:100%;
-    height: 100%;
-    padding-left: 0px;
+    justify-content:start;
+    /* width:100%;
+    height: 100%; */
+    /* padding-left: 0px; */
 }
 
 .left {
@@ -34,7 +36,7 @@ img {
     grid-column: 1 / 2;
     display: flex;
     flex-direction: column;
-    /* align-items: flex-start; */
+    align-items: stretch;
     /* padding-left: 30px; */
     /* Justify-content: space-between; */
 }
@@ -44,7 +46,8 @@ img {
 .right {
     display: grid;
     grid-column: 2 / 3;
-    padding-left 40px;
+    padding-left; 40px;
+    align-content: space-around;
 }
 
 #name {
