--- a/style.css
+++ b/style.css
@@ -1,30 +1,38 @@
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    width: 800px;
-    border: 1px black;
+    margin: 0;
+    /* height: 1232px; */
 }
 
 h1 {font-size: 2em}
 h2 {font-size: 1.5em}
 h3 {font-size: 1em}
 
-.grid {
+.container {
     display: grid;
-    grid-template-columns: 400px 400px;
-    /* grid-gap: 80px; */
+    grid-template-columns: 10% 90%;
+    grid-template-rows: 50% 50%;
     background-color: white;
     color:blue;
+    border: 1px black solid;
+    width: 960px;
+    height: 1230px;
+    grid-area: text;
+    grid-template:
+        'left right'
+        'lower .';
 }
 
 img {
     width: 100%;
-    /* object-fit: cover; */
+    object-fit: cover;
 }
 
 #photo {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    justify-content:start;
+    justify-content: start;
+    margin: 0;
     /* width:100%;
     height: 100%; */
     /* padding-left: 0px; */
@@ -33,24 +41,44 @@ img {
 .left {
     background: blue;
     color: white;
-    grid-column: 1 / 2;
+    /* grid-column: 1 / 2; */
+    /* display: grid; */
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    /* padding-left: 30px; */
-    /* Justify-content: space-between; */
 }
 
+#lower {
+    margin-top: 0px;
+    padding-left: 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin-bottom: 10px;
+}
 
-
+.contacts {
+    min-width: 354px;
+    /* Max-height: 600px; */
+}
 .right {
-    display: grid;
-    grid-column: 2 / 3;
-    padding-left; 40px;
-    align-content: space-around;
+    /* display: grid; */
+    /* grid-area: text; */
+    margin: 50px;
+    grid-template:
+        'name    .      .'
+        'title   .      .'
+        'summary .    skills'
+        'work-a  .      .'
+        'work-b work-c  .'
+        'work-d work-e  .'
+        'acad-a  .      .'
+        'acad-b acad-c  .'
+        'acad-d acad-e  .';
 }
 
 #name {
+    /* grid-area: 1 / span 3; */
     font-size: 90px;
     font-weight: bold;
 }
